<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyAgregarClientes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cl.mcl.mvd.PruebaMVD.Agregar">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formulario"
                android:textSize="20dp"
                android:textAlignment="center"
                android:padding="10dp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txvrun"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtRun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_run"
                android:inputType="text" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txvnombre"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_nombre"
                android:inputType="text" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txvdireccion"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_direccion"
                android:inputType="text" />





            <TextView
                android:id="@+id/lblFechaCompra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/ingrese_fecha"
                android:inputType="textPersonName"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seleccionar" />

            <TextView
                android:id="@+id/lblFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txv_selecc_genero"
                android:ems="10"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cbgenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/gene"
                android:spinnerMode="dialog"
                />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txvtelefono"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_telefono"
                android:inputType="number" />

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>