<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cl.mcl.mvd.PruebaMVD.ServicioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_Cliente"
                android:textSize="20dp"
                android:textAlignment="center"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txvrun"
                    android:textSize="15dp"></TextView>
                <TextView
                    android:id="@+id/txv_runC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"></TextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nombre :"
                    android:textSize="15dp"></TextView>
                <TextView
                    android:id="@+id/txv_nombreC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"></TextView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txvdireccion"
                    android:textSize="15dp"></TextView>
                <TextView
                    android:id="@+id/txv_direccionC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"></TextView>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txvfecha"
                    android:textSize="15dp"></TextView>
                <TextView
                    android:id="@+id/txv_fechaC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"></TextView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txvtelefono"
                    android:textSize="15dp"></TextView>
                <TextView
                    android:id="@+id/txv_telefonoC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"></TextView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txvgenero"
                    android:textSize="15dp"></TextView>
                <TextView
                    android:id="@+id/txv_generoC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"></TextView>


            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_vehiculo"
                android:textSize="18sp"
                android:textStyle="bold" />




                <RadioGroup
                    android:id="@+id/rg_tipo"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rb_auto"
                        android:text="@string/automovil"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </RadioButton>
                    <RadioButton
                        android:id="@+id/rb_camion"
                        android:text="@string/camion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </RadioButton>
                </RadioGroup>




            <EditText
                android:id="@+id/txtPatente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_patente"
                android:inputType="text" />
            <EditText
                android:id="@+id/txtMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_marca"
                android:inputType="text" />
            <EditText
                android:id="@+id/txtModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_modelo"
                android:inputType="text" />
            <EditText
                android:id="@+id/txtAnio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_anio"
                android:inputType="number" />
            <EditText
                android:id="@+id/txtCantPuertas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_puertas"
                android:inputType="number" />
            <EditText
                android:id="@+id/txtKilometros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_kilometraje"
                android:inputType="number" />
            <EditText
                android:id="@+id/txtCantCarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:visibility="gone"
                android:hint="@string/ingrese_carga"
                android:inputType="number" />

            <TextView
                android:id="@+id/lbl_camarote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txvcamarote"
                android:visibility="gone"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cbCamarote"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnRegistrarServicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvServicios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>